--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Sandra i Rafał
-email: your-email@example.com
+email: sandrarafalkoziel@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Sandra i Rafał - 14 czerwca 2025
 baseurl: "" # the subpath of your site, e.g. /blog
